# free_storage

./: .gitignore  LICENSE  Pipfile  README.md  lint.sh  setup.cfg  setup.py
free_storage/: __init__.py  _cloud_storage.py  _google_drive_file.py  _google_drive_file_system.py  _google_drive_storage.py
tests/: test_google_drive_file.py  test_google_drive_file_system.py  test_google_drive_storage.py
